--- a/main.html
+++ b/main.html
@@ -1,1 +1,29 @@
-<a href="https://sorare.com/oauth/authorize?client_id=HZv36fDrsZErupj6uBBFz20qTLqo0ZZ5svCHrtcYMPg&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Fmain.html&response_type=code&scope=">LogIn With Sorare</a>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Hurricane Dashboard</title>
+  <meta charset="utf-8" />
+  <script src="./Scripts/homePage.js"></script>
+  <link rel="icon" href="./Assets/Hurricane Logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+
+
+<body>
+  <div id="top"></div>
+
+  <div id="hurriLogo" class="freezeframe">
+    <img src="./Assets/Hurricane Logo.png" alt="gif preset">
+    <img src="./Assets/xaloc.gif" alt="gif preset">
+  </div>
+  
+
+  <h3>
+    Xaloc Corp.
+  </h3>
+
+</body>
+
+</html>
