--- a/HomePage.html
+++ b/HomePage.html
@@ -4,9 +4,8 @@
 <head>
   <title>Hurricane Dashboard</title>
   <meta charset="utf-8" />
-  <script src="./homePage.js"></script>
   <link rel="icon" href="./Assets/Hurricane Logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="HomeStyle.css">
+  <link rel="stylesheet" href="homeStyle.css">
 </head>
 
 
