--- a/HomePage.html
+++ b/HomePage.html
@@ -19,6 +19,7 @@
 
   <div id="blackboard">
     <div id = "totETH">Totale ETH Al Deposito</div>
+    <div id="cardNumber">0</div>
     <div id = "totETHCalcio">Totale ETH Calcio</div>
     <div id = "totETHNBA">Totale ETH NBA</div>
     <div id = "totCarte">Totale Carte</div>
