--- a/HomePage.html
+++ b/HomePage.html
@@ -19,7 +19,8 @@
 
   <div id="blackboard">
     <div id = "totETH">Totale ETH Al Deposito</div>
-    <div id="cardNumber">0</div>
+    <p id = "ETH">demo</p>
+    <script type ="text/javscript" src = "Scripts/totETH.js"></script>
     <div id = "totETHCalcio">Totale ETH Calcio</div>
     <div id = "totETHNBA">Totale ETH NBA</div>
     <div id = "totCarte">Totale Carte</div>
