--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Hurricane Dashboard</title>
+  <meta tag="Author" content="aleruta">
   <meta charset="utf-8" />
   <link rel="icon" href="./Assets/Hurricane Logo.png" type="image/x-icon">
   <link rel="stylesheet" href="homeStyle.css">
@@ -11,16 +12,18 @@
 
 
 <body>
-  <div id="top"></div>  <!-- barra in alto -->
+  <div id="top">
+    <img src="./Assets/Hurricane Logo.png">
+  </div>  <!-- barra in alto -->
 
-  <img src="./Assets/Hurricane Logo.png">
+  
 
-  <h3>Xaloc</h3>
+  <h3>Hurricane</h3>
 
   <div id="blackboard">
     <div id = "totETH">Totale ETH Al Deposito</div>
     <p id = "ETH">demo</p>
-    <script type ="text/javscript" src = "Scripts/totETH.js"></script>
+    <script type ="text/javascript" src = "./Scripts/totETH.js"></script>
     <div id = "totETHCalcio">Totale ETH Calcio</div>
     <div id = "totETHNBA">Totale ETH NBA</div>
     <div id = "totCarte">Totale Carte</div>
