--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta tag="Author" content="aleruta">
   <meta charset="utf-8" />
   <link rel="icon" href="./Assets/Hurricane Logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="homeStyle.css">
+  <link rel="stylesheet" href="./homeStyle.css">
 </head>
 
 
