--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
   
 
-  <h3>Hurricane</h3>
+  
 
   <div id="blackboard">
-    <div id = "totETH">Totale ETH Al Deposito</div>
-    <p id = "ETH">demo</p>
-    <script type ="text/javascript" src = "./Scripts/totETH.js"></script>
-    <div id = "totETHCalcio">Totale ETH Calcio</div>
-    <div id = "totETHNBA">Totale ETH NBA</div>
-    <div id = "totCarte">Totale Carte</div>
-    <div id = "totCarteCalcio">Totale Carte Calcio</div>
-    <div id = "totCarteNBA">Totale Carte NBA</div>
+    <ul>
+      <li class="left"><p>Totale ETH</p></li>
+      <li class="right"><p>Totale ETH NBA</p></li>
+      <li class="left"><p>Totale ETH Calcio</p></li>
+      <li class="right"><p>Totale Carte NBA</p></li>
+      <li class="left"><p>Totale Carte</p></li>
+      <li class="right"><p>Totale Carte Calcio</p></li> 
+    </ul>
   </div> <!-- finestra centrale -->
 
-  <div id="bottom"></div> <!-- barra in basso -->
+  <div id="bottom"><h3>Hurricane by Xaloc Viento</h3></div> <!-- barra in basso -->
 </body>
 
 </html>
