--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <title>Hurricane Dashboard</title>
+  <title>Hurricane Dashboard
+  </title>
   <meta tag="Author" content="aleruta">
   <meta charset="utf-8" />
   <link rel="icon" href="./Assets/Hurricane Logo.png" type="image/x-icon">
