--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
 
 
 <body>
+  <!-- barra in alto -->
   <div id="top">
     <img src="./Assets/Hurricane Logo.png">
-  </div>  <!-- barra in alto -->
-
-  
-
-  
-
+  </div>  
+  <!-- finestra centrale -->
   <div id="blackboard">
     <ul>
       <li class="left"><p>Totale ETH</p></li>
@@ -30,9 +27,9 @@
       <li class="left"><p>Totale Carte</p></li>
       <li class="right"><p>Totale Carte Calcio</p></li> 
     </ul>
-  </div> <!-- finestra centrale -->
-
-  <div id="bottom"><h3>Hurricane by Xaloc Viento</h3></div> <!-- barra in basso -->
+  </div> 
+<!-- barra in basso -->
+  <div id="bottom"><h3>Hurricane by Xaloc Viento</h3></div> 
 </body>
 
 </html>
