--- a/index.html
+++ b/index.html
@@ -16,20 +16,34 @@
   <!-- barra in alto -->
   <div id="top">
     <img src="./Assets/Hurricane Logo.png">
-  </div>  
+  </div>
   <!-- finestra centrale -->
   <div id="blackboard">
     <ul>
-      <li class="left"><p>Totale ETH</p></li>
-      <li class="right"><p>Totale ETH NBA</p></li>
-      <li class="left"><p>Totale ETH Calcio</p></li>
-      <li class="right"><p>Totale Carte NBA</p></li>
-      <li class="left"><p>Totale Carte</p></li>
-      <li class="right"><p>Totale Carte Calcio</p></li> 
+      <li class="left">
+        <p>Totale ETH</p>
+      </li>
+      <li class="right">
+        <p>Totale ETH NBA</p>
+      </li>
+      <li class="left">
+        <p>Totale ETH Calcio</p>
+      </li>
+      <li class="right">
+        <p>Totale Carte NBA</p>
+      </li>
+      <li class="left">
+        <p>Totale Carte</p>
+      </li>
+      <li class="right">
+        <p>Totale Carte Calcio</p>
+      </li>
     </ul>
-  </div> 
-<!-- barra in basso -->
-  <div id="bottom"><h3>Hurricane by Xaloc Viento</h3></div> 
+  </div>
+  <!-- barra in basso -->
+  <div id="bottom">
+    <h3>Hurricane by Xaloc Viento</h3>
+  </div>
 </body>
 
 </html>
