Creating Sorare Login

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- barra in alto -->
   <div id="top">
     <img src="./Assets/Hurricane Logo.png">
+    <button onclick="window.location.href='https://sorare.com/oauth/authorize?client_id=9VE0PbHhR-Z87fcDHlh9ZTP6YoyUw3ticjuculVHSJk&redirect_uri=https%3A%2F%2Faleruta26.github.io%2FHurricane%2F&response_type=code&scope=';">Login</button>
   </div>
   <!-- finestra centrale -->
   <div id="blackboard">
