--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   <!-- barra in basso -->
   <div id="bottom">
-    <h3>Hurricane by Xaloc Viento</h3>
+    <h3>Hurricane</h3>
   </div>
 </body>
 </html>
